// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`e2e native > 'vite-native' > css 1`] = `
"/*! tailwindcss v4.0.6 | MIT License | https://tailwindcss.com */
page,
:host {
  --font-sans:
    ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
    'Noto Color Emoji';
  --font-serif: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
  --color-red-50: rgb(254, 242, 242);
  --color-red-100: rgb(255, 226, 226);
  --color-red-200: rgb(255, 202, 202);
  --color-red-300: rgb(255, 163, 164);
  --color-red-400: rgb(255, 101, 104);
  --color-red-500: rgb(251, 44, 54);
  --color-red-600: rgb(228, 0, 22);
  --color-red-700: rgb(191, 0, 15);
  --color-red-800: rgb(159, 7, 18);
  --color-red-900: rgb(130, 24, 26);
  --color-red-950: rgb(70, 8, 9);
  --color-orange-50: rgb(255, 247, 237);
  --color-orange-100: rgb(255, 237, 213);
  --color-orange-200: rgb(255, 215, 168);
  --color-orange-300: rgb(255, 185, 112);
  --color-orange-400: rgb(255, 139, 31);
  --color-orange-500: rgb(252, 113, 0);
  --color-orange-600: rgb(236, 86, 0);
  --color-orange-700: rgb(196, 62, 0);
  --color-orange-800: rgb(159, 45, 0);
  --color-orange-900: rgb(126, 42, 12);
  --color-orange-950: rgb(68, 19, 6);
  --color-amber-50: rgb(255, 251, 235);
  --color-amber-100: rgb(254, 243, 198);
  --color-amber-200: rgb(254, 230, 133);
  --color-amber-300: rgb(255, 210, 55);
  --color-amber-400: rgb(250, 188, 0);
  --color-amber-500: rgb(246, 158, 0);
  --color-amber-600: rgb(218, 119, 0);
  --color-amber-700: rgb(181, 82, 0);
  --color-amber-800: rgb(149, 61, 0);
  --color-amber-900: rgb(123, 51, 6);
  --color-amber-950: rgb(70, 25, 1);
  --color-yellow-50: rgb(254, 252, 232);
  --color-yellow-100: rgb(254, 249, 194);
  --color-yellow-200: rgb(255, 240, 133);
  --color-yellow-300: rgb(255, 224, 46);
  --color-yellow-400: rgb(247, 201, 0);
  --color-yellow-500: rgb(234, 179, 0);
  --color-yellow-600: rgb(202, 138, 0);
  --color-yellow-700: rgb(162, 98, 0);
  --color-yellow-800: rgb(135, 76, 0);
  --color-yellow-900: rgb(115, 62, 10);
  --color-yellow-950: rgb(67, 32, 4);
  --color-lime-50: rgb(247, 254, 231);
  --color-lime-100: rgb(236, 252, 202);
  --color-lime-200: rgb(216, 249, 153);
  --color-lime-300: rgb(187, 244, 81);
  --color-lime-400: rgb(157, 229, 0);
  --color-lime-500: rgb(131, 204, 0);
  --color-lime-600: rgb(100, 163, 0);
  --color-lime-700: rgb(75, 124, 0);
  --color-lime-800: rgb(61, 99, 0);
  --color-lime-900: rgb(53, 83, 14);
  --color-lime-950: rgb(25, 46, 3);
  --color-green-50: rgb(240, 253, 244);
  --color-green-100: rgb(220, 252, 231);
  --color-green-200: rgb(185, 248, 207);
  --color-green-300: rgb(123, 241, 168);
  --color-green-400: rgb(5, 223, 114);
  --color-green-500: rgb(0, 198, 90);
  --color-green-600: rgb(0, 164, 71);
  --color-green-700: rgb(0, 129, 58);
  --color-green-800: rgb(1, 102, 48);
  --color-green-900: rgb(13, 84, 43);
  --color-green-950: rgb(3, 46, 21);
  --color-emerald-50: rgb(236, 253, 245);
  --color-emerald-100: rgb(208, 250, 229);
  --color-emerald-200: rgb(164, 244, 207);
  --color-emerald-300: rgb(94, 233, 181);
  --color-emerald-400: rgb(0, 210, 148);
  --color-emerald-500: rgb(0, 185, 129);
  --color-emerald-600: rgb(0, 150, 105);
  --color-emerald-700: rgb(0, 120, 87);
  --color-emerald-800: rgb(0, 95, 70);
  --color-emerald-900: rgb(0, 78, 59);
  --color-emerald-950: rgb(0, 44, 34);
  --color-teal-50: rgb(240, 253, 250);
  --color-teal-100: rgb(203, 251, 241);
  --color-teal-200: rgb(150, 247, 228);
  --color-teal-300: rgb(70, 236, 213);
  --color-teal-400: rgb(0, 211, 189);
  --color-teal-500: rgb(0, 185, 166);
  --color-teal-600: rgb(0, 148, 136);
  --color-teal-700: rgb(0, 119, 110);
  --color-teal-800: rgb(0, 95, 90);
  --color-teal-900: rgb(11, 79, 74);
  --color-teal-950: rgb(2, 47, 46);
  --color-cyan-50: rgb(236, 254, 255);
  --color-cyan-100: rgb(206, 250, 254);
  --color-cyan-200: rgb(162, 244, 253);
  --color-cyan-300: rgb(83, 234, 253);
  --color-cyan-400: rgb(0, 209, 236);
  --color-cyan-500: rgb(0, 182, 212);
  --color-cyan-600: rgb(0, 145, 179);
  --color-cyan-700: rgb(0, 116, 145);
  --color-cyan-800: rgb(0, 95, 120);
  --color-cyan-900: rgb(16, 78, 100);
  --color-cyan-950: rgb(5, 51, 69);
  --color-sky-50: rgb(240, 249, 255);
  --color-sky-100: rgb(223, 242, 254);
  --color-sky-200: rgb(184, 230, 254);
  --color-sky-300: rgb(120, 212, 255);
  --color-sky-400: rgb(0, 187, 253);
  --color-sky-500: rgb(0, 165, 234);
  --color-sky-600: rgb(0, 132, 199);
  --color-sky-700: rgb(0, 105, 162);
  --color-sky-800: rgb(0, 89, 134);
  --color-sky-900: rgb(2, 74, 112);
  --color-sky-950: rgb(5, 47, 74);
  --color-blue-50: rgb(239, 246, 255);
  --color-blue-100: rgb(219, 234, 254);
  --color-blue-200: rgb(190, 219, 255);
  --color-blue-300: rgb(145, 197, 255);
  --color-blue-400: rgb(86, 162, 255);
  --color-blue-500: rgb(50, 128, 255);
  --color-blue-600: rgb(21, 93, 252);
  --color-blue-700: rgb(20, 71, 230);
  --color-blue-800: rgb(25, 60, 184);
  --color-blue-900: rgb(28, 57, 142);
  --color-blue-950: rgb(22, 36, 86);
  --color-indigo-50: rgb(238, 242, 255);
  --color-indigo-100: rgb(224, 231, 255);
  --color-indigo-200: rgb(199, 210, 255);
  --color-indigo-300: rgb(164, 180, 255);
  --color-indigo-400: rgb(125, 135, 255);
  --color-indigo-500: rgb(98, 96, 255);
  --color-indigo-600: rgb(79, 57, 246);
  --color-indigo-700: rgb(67, 45, 215);
  --color-indigo-800: rgb(55, 42, 172);
  --color-indigo-900: rgb(49, 44, 133);
  --color-indigo-950: rgb(30, 26, 77);
  --color-violet-50: rgb(245, 243, 255);
  --color-violet-100: rgb(237, 233, 254);
  --color-violet-200: rgb(221, 214, 255);
  --color-violet-300: rgb(196, 180, 255);
  --color-violet-400: rgb(166, 134, 255);
  --color-violet-500: rgb(141, 86, 255);
  --color-violet-600: rgb(127, 34, 254);
  --color-violet-700: rgb(112, 8, 231);
  --color-violet-800: rgb(93, 14, 192);
  --color-violet-900: rgb(77, 23, 154);
  --color-violet-950: rgb(47, 13, 104);
  --color-purple-50: rgb(250, 245, 255);
  --color-purple-100: rgb(243, 232, 255);
  --color-purple-200: rgb(233, 213, 255);
  --color-purple-300: rgb(216, 180, 255);
  --color-purple-400: rgb(191, 126, 255);
  --color-purple-500: rgb(171, 78, 255);
  --color-purple-600: rgb(152, 16, 250);
  --color-purple-700: rgb(130, 0, 217);
  --color-purple-800: rgb(110, 17, 176);
  --color-purple-900: rgb(89, 22, 139);
  --color-purple-950: rgb(60, 3, 102);
  --color-fuchsia-50: rgb(253, 244, 255);
  --color-fuchsia-100: rgb(250, 232, 255);
  --color-fuchsia-200: rgb(246, 207, 255);
  --color-fuchsia-300: rgb(242, 169, 255);
  --color-fuchsia-400: rgb(236, 109, 255);
  --color-fuchsia-500: rgb(225, 42, 251);
  --color-fuchsia-600: rgb(197, 0, 218);
  --color-fuchsia-700: rgb(166, 0, 180);
  --color-fuchsia-800: rgb(138, 1, 148);
  --color-fuchsia-900: rgb(114, 19, 120);
  --color-fuchsia-950: rgb(75, 0, 79);
  --color-pink-50: rgb(253, 242, 248);
  --color-pink-100: rgb(252, 231, 243);
  --color-pink-200: rgb(252, 206, 232);
  --color-pink-300: rgb(253, 165, 213);
  --color-pink-400: rgb(251, 100, 182);
  --color-pink-500: rgb(246, 51, 154);
  --color-pink-600: rgb(227, 0, 118);
  --color-pink-700: rgb(194, 0, 92);
  --color-pink-800: rgb(162, 0, 76);
  --color-pink-900: rgb(134, 16, 67);
  --color-pink-950: rgb(81, 4, 36);
  --color-rose-50: rgb(255, 241, 242);
  --color-rose-100: rgb(255, 228, 230);
  --color-rose-200: rgb(255, 204, 211);
  --color-rose-300: rgb(255, 163, 174);
  --color-rose-400: rgb(255, 104, 128);
  --color-rose-500: rgb(255, 35, 87);
  --color-rose-600: rgb(230, 0, 69);
  --color-rose-700: rgb(193, 0, 58);
  --color-rose-800: rgb(163, 0, 55);
  --color-rose-900: rgb(139, 8, 54);
  --color-rose-950: rgb(77, 2, 24);
  --color-slate-50: rgb(248, 250, 252);
  --color-slate-100: rgb(241, 245, 249);
  --color-slate-200: rgb(226, 232, 240);
  --color-slate-300: rgb(202, 213, 226);
  --color-slate-400: rgb(144, 161, 185);
  --color-slate-500: rgb(98, 116, 142);
  --color-slate-600: rgb(69, 85, 108);
  --color-slate-700: rgb(49, 65, 88);
  --color-slate-800: rgb(29, 41, 61);
  --color-slate-900: rgb(15, 23, 43);
  --color-slate-950: rgb(2, 6, 24);
  --color-gray-50: rgb(249, 250, 251);
  --color-gray-100: rgb(243, 244, 246);
  --color-gray-200: rgb(229, 231, 235);
  --color-gray-300: rgb(209, 213, 220);
  --color-gray-400: rgb(153, 161, 175);
  --color-gray-500: rgb(106, 114, 130);
  --color-gray-600: rgb(74, 85, 101);
  --color-gray-700: rgb(54, 65, 83);
  --color-gray-800: rgb(30, 41, 57);
  --color-gray-900: rgb(16, 24, 40);
  --color-gray-950: rgb(3, 7, 18);
  --color-zinc-50: rgb(250, 250, 250);
  --color-zinc-100: rgb(244, 244, 245);
  --color-zinc-200: rgb(228, 228, 231);
  --color-zinc-300: rgb(212, 212, 216);
  --color-zinc-400: rgb(159, 159, 169);
  --color-zinc-500: rgb(113, 113, 123);
  --color-zinc-600: rgb(82, 82, 92);
  --color-zinc-700: rgb(63, 63, 70);
  --color-zinc-800: rgb(39, 39, 42);
  --color-zinc-900: rgb(24, 24, 27);
  --color-zinc-950: rgb(9, 9, 11);
  --color-neutral-50: rgb(250, 250, 250);
  --color-neutral-100: rgb(245, 245, 245);
  --color-neutral-200: rgb(229, 229, 229);
  --color-neutral-300: rgb(212, 212, 212);
  --color-neutral-400: rgb(161, 161, 161);
  --color-neutral-500: rgb(115, 115, 115);
  --color-neutral-600: rgb(82, 82, 82);
  --color-neutral-700: rgb(64, 64, 64);
  --color-neutral-800: rgb(38, 38, 38);
  --color-neutral-900: rgb(23, 23, 23);
  --color-neutral-950: rgb(10, 10, 10);
  --color-stone-50: rgb(250, 250, 249);
  --color-stone-100: rgb(245, 245, 244);
  --color-stone-200: rgb(231, 229, 228);
  --color-stone-300: rgb(214, 211, 209);
  --color-stone-400: rgb(166, 160, 155);
  --color-stone-500: rgb(121, 113, 107);
  --color-stone-600: rgb(87, 83, 77);
  --color-stone-700: rgb(68, 64, 59);
  --color-stone-800: rgb(41, 37, 36);
  --color-stone-900: rgb(28, 25, 23);
  --color-stone-950: rgb(12, 10, 9);
  --color-black: #000;
  --color-white: #fff;
  --spacing: 8rpx;
  --breakpoint-sm: 1280rpx;
  --breakpoint-md: 1536rpx;
  --breakpoint-lg: 2048rpx;
  --breakpoint-xl: 2560rpx;
  --breakpoint-2xl: 3072rpx;
  --container-3xs: 512rpx;
  --container-2xs: 576rpx;
  --container-xs: 640rpx;
  --container-sm: 768rpx;
  --container-md: 896rpx;
  --container-lg: 1024rpx;
  --container-xl: 1152rpx;
  --container-2xl: 1344rpx;
  --container-3xl: 1536rpx;
  --container-4xl: 1792rpx;
  --container-5xl: 2048rpx;
  --container-6xl: 2304rpx;
  --container-7xl: 2560rpx;
  --text-xs: 24rpx;
  --text-xs--line-height: calc(1 / 0.75);
  --text-sm: 28rpx;
  --text-sm--line-height: calc(1.25 / 0.875);
  --text-base: 32rpx;
  --text-base--line-height: 1.5;
  --text-lg: 36rpx;
  --text-lg--line-height: calc(1.75 / 1.125);
  --text-xl: 40rpx;
  --text-xl--line-height: calc(1.75 / 1.25);
  --text-2xl: 48rpx;
  --text-2xl--line-height: calc(2 / 1.5);
  --text-3xl: 60rpx;
  --text-3xl--line-height: 1.2;
  --text-4xl: 72rpx;
  --text-4xl--line-height: calc(2.5 / 2.25);
  --text-5xl: 96rpx;
  --text-5xl--line-height: 1;
  --text-6xl: 120rpx;
  --text-6xl--line-height: 1;
  --text-7xl: 144rpx;
  --text-7xl--line-height: 1;
  --text-8xl: 192rpx;
  --text-8xl--line-height: 1;
  --text-9xl: 256rpx;
  --text-9xl--line-height: 1;
  --font-weight-thin: 100;
  --font-weight-extralight: 200;
  --font-weight-light: 300;
  --font-weight-normal: 400;
  --font-weight-medium: 500;
  --font-weight-semibold: 600;
  --font-weight-bold: 700;
  --font-weight-extrabold: 800;
  --font-weight-black: 900;
  --tracking-tighter: -0.05em;
  --tracking-tight: -0.025em;
  --tracking-normal: 0em;
  --tracking-wide: 0.025em;
  --tracking-wider: 0.05em;
  --tracking-widest: 0.1em;
  --leading-tight: 1.25;
  --leading-snug: 1.375;
  --leading-normal: 1.5;
  --leading-relaxed: 1.625;
  --leading-loose: 2;
  --radius-xs: 4rpx;
  --radius-sm: 8rpx;
  --radius-md: 12rpx;
  --radius-lg: 16rpx;
  --radius-xl: 24rpx;
  --radius-2xl: 32rpx;
  --radius-3xl: 48rpx;
  --radius-4xl: 64rpx;
  --shadow-2xs: 0 1px rgba(0, 0, 0, 0.05098);
  --shadow-xs: 0 1px 2px 0 rgba(0, 0, 0, 0.05098);
  --shadow-sm: 0 1px 3px 0 rgba(0, 0, 0, 0.10196), 0 1px 2px -1px rgba(0, 0, 0, 0.10196);
  --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.10196), 0 2px 4px -2px rgba(0, 0, 0, 0.10196);
  --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.10196), 0 4px 6px -4px rgba(0, 0, 0, 0.10196);
  --shadow-xl: 0 20px 25px -5px rgba(0, 0, 0, 0.10196), 0 8px 10px -6px rgba(0, 0, 0, 0.10196);
  --shadow-2xl: 0 25px 50px -12px rgba(0, 0, 0, 0.25098);
  --inset-shadow-2xs: inset 0 1px rgba(0, 0, 0, 0.05098);
  --inset-shadow-xs: inset 0 1px 1px rgba(0, 0, 0, 0.05098);
  --inset-shadow-sm: inset 0 2px 4px rgba(0, 0, 0, 0.05098);
  --drop-shadow-xs: 0 1px 1px rgba(0, 0, 0, 0.05098);
  --drop-shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.14902);
  --drop-shadow-md: 0 3px 3px rgba(0, 0, 0, 0.12157);
  --drop-shadow-lg: 0 4px 4px rgba(0, 0, 0, 0.14902);
  --drop-shadow-xl: 0 9px 7px rgba(0, 0, 0, 0.10196);
  --drop-shadow-2xl: 0 25px 25px rgba(0, 0, 0, 0.14902);
  --ease-in: cubic-bezier(0.4, 0, 1, 1);
  --ease-out: cubic-bezier(0, 0, 0.2, 1);
  --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
  --animate-spin: spin 1s linear infinite;
  --animate-ping: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
  --animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
  --animate-bounce: bounce 1s infinite;
  --blur-xs: 4px;
  --blur-sm: 8px;
  --blur-md: 12px;
  --blur-lg: 16px;
  --blur-xl: 24px;
  --blur-2xl: 40px;
  --blur-3xl: 64px;
  --perspective-dramatic: 100px;
  --perspective-near: 300px;
  --perspective-normal: 500px;
  --perspective-midrange: 800px;
  --perspective-distant: 1200px;
  --aspect-video: 16/9;
  --default-transition-duration: 0.15s;
  --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  --default-font-family: var(--font-sans);
  --default-font-feature-settings: var(--font-sans--font-feature-settings);
  --default-font-variation-settings: var(--font-sans--font-variation-settings);
  --default-mono-font-family: var(--font-mono);
  --default-mono-font-feature-settings: var(--font-mono--font-feature-settings);
  --default-mono-font-variation-settings: var(--font-mono--font-variation-settings);
}
@supports (color: color(display-p3 0 0 0%)) {
  page,
  :host {
    --color-red-200: rgb(255, 202, 202);
    --color-red-300: rgb(255, 163, 164);
    --color-red-400: rgb(255, 101, 104);
    --color-red-600: rgb(228, 0, 22);
    --color-red-700: rgb(191, 0, 16);
    --color-orange-50: rgb(255, 247, 237);
    --color-orange-100: rgb(255, 237, 213);
    --color-orange-200: rgb(255, 215, 168);
    --color-orange-300: rgb(255, 185, 112);
    --color-orange-400: rgb(255, 139, 31);
    --color-orange-500: rgb(252, 113, 0);
    --color-orange-600: rgb(236, 86, 0);
    --color-orange-700: rgb(196, 62, 0);
    --color-orange-800: rgb(159, 45, 0);
    --color-amber-50: rgb(255, 251, 235);
    --color-amber-300: rgb(255, 210, 55);
    --color-amber-400: rgb(250, 188, 0);
    --color-amber-500: rgb(246, 158, 0);
    --color-amber-600: rgb(218, 119, 0);
    --color-amber-700: rgb(181, 82, 0);
    --color-amber-800: rgb(149, 61, 0);
    --color-yellow-300: rgb(255, 224, 46);
    --color-yellow-400: rgb(247, 201, 0);
    --color-yellow-500: rgb(234, 179, 0);
    --color-yellow-600: rgb(202, 138, 0);
    --color-yellow-700: rgb(162, 98, 0);
    --color-yellow-800: rgb(135, 76, 0);
    --color-lime-400: rgb(157, 229, 0);
    --color-lime-500: rgb(131, 204, 0);
    --color-lime-600: rgb(100, 163, 0);
    --color-lime-700: rgb(75, 124, 0);
    --color-lime-800: rgb(61, 99, 0);
    --color-green-500: rgb(0, 198, 90);
    --color-green-600: rgb(0, 164, 71);
    --color-green-700: rgb(0, 129, 58);
    --color-emerald-400: rgb(0, 210, 148);
    --color-emerald-500: rgb(0, 185, 129);
    --color-emerald-600: rgb(0, 150, 105);
    --color-emerald-700: rgb(0, 120, 87);
    --color-emerald-800: rgb(0, 95, 70);
    --color-emerald-900: rgb(0, 78, 59);
    --color-emerald-950: rgb(0, 44, 34);
    --color-teal-400: rgb(0, 211, 189);
    --color-teal-500: rgb(0, 185, 166);
    --color-teal-600: rgb(0, 148, 136);
    --color-teal-700: rgb(0, 119, 110);
    --color-teal-800: rgb(0, 95, 90);
    --color-cyan-400: rgb(0, 209, 236);
    --color-cyan-500: rgb(0, 182, 212);
    --color-cyan-600: rgb(0, 145, 179);
    --color-cyan-700: rgb(0, 116, 145);
    --color-cyan-800: rgb(0, 95, 120);
    --color-sky-50: rgb(240, 249, 255);
    --color-sky-300: rgb(120, 212, 255);
    --color-sky-400: rgb(0, 187, 253);
    --color-sky-500: rgb(0, 165, 234);
    --color-sky-600: rgb(0, 132, 199);
    --color-sky-700: rgb(0, 105, 162);
    --color-sky-800: rgb(0, 89, 134);
    --color-blue-200: rgb(190, 219, 255);
    --color-blue-300: rgb(145, 197, 255);
    --color-blue-400: rgb(86, 162, 255);
    --color-blue-500: rgb(50, 128, 255);
    --color-indigo-50: rgb(238, 242, 255);
    --color-indigo-100: rgb(224, 231, 255);
    --color-indigo-200: rgb(199, 210, 255);
    --color-indigo-300: rgb(164, 180, 255);
    --color-indigo-400: rgb(125, 135, 255);
    --color-indigo-500: rgb(98, 96, 255);
    --color-violet-200: rgb(221, 214, 255);
    --color-violet-300: rgb(196, 180, 255);
    --color-violet-400: rgb(166, 134, 255);
    --color-violet-500: rgb(141, 86, 255);
    --color-purple-200: rgb(233, 213, 255);
    --color-purple-300: rgb(216, 180, 255);
    --color-purple-400: rgb(191, 126, 255);
    --color-purple-500: rgb(171, 78, 255);
    --color-purple-700: rgb(130, 0, 217);
    --color-fuchsia-100: rgb(250, 232, 255);
    --color-fuchsia-200: rgb(246, 207, 255);
    --color-fuchsia-300: rgb(242, 169, 255);
    --color-fuchsia-400: rgb(236, 109, 255);
    --color-fuchsia-600: rgb(197, 0, 218);
    --color-fuchsia-700: rgb(166, 0, 180);
    --color-pink-600: rgb(227, 0, 118);
    --color-pink-700: rgb(194, 0, 92);
    --color-pink-800: rgb(162, 0, 76);
    --color-rose-100: rgb(255, 228, 230);
    --color-rose-200: rgb(255, 204, 211);
    --color-rose-300: rgb(255, 163, 174);
    --color-rose-400: rgb(255, 104, 128);
    --color-rose-500: rgb(255, 35, 87);
    --color-rose-600: rgb(230, 0, 69);
    --color-rose-700: rgb(193, 0, 58);
    --color-rose-800: rgb(163, 0, 55);
  }

  @media (color-gamut: p3) {
    page,
    :host {
      --color-red-200: color(display-p3 0.96956 0.79815 0.7943);
      --color-red-300: color(display-p3 0.95692 0.65189 0.64512);
      --color-red-400: color(display-p3 0.93353 0.43168 0.42349);
      --color-red-600: color(display-p3 0.83032 0.14038 0.1332);
      --color-red-700: color(display-p3 0.69274 0.11623 0.10468);
      --color-orange-50: color(display-p3 0.99533 0.97013 0.9335);
      --color-orange-100: color(display-p3 0.98876 0.93139 0.84327);
      --color-orange-200: color(display-p3 0.97465 0.84705 0.68011);
      --color-orange-300: color(display-p3 0.96801 0.73435 0.46416);
      --color-orange-400: color(display-p3 0.95019 0.56181 0.21102);
      --color-orange-500: color(display-p3 0.94659 0.44979 0.07573);
      --color-orange-600: color(display-p3 0.88747 0.34166 0.022);
      --color-orange-700: color(display-p3 0.72984 0.25726 0.05111);
      --color-orange-800: color(display-p3 0.57559 0.21198 0.08266);
      --color-amber-50: color(display-p3 0.9978 0.98505 0.92631);
      --color-amber-300: color(display-p3 0.97433 0.83063 0.33298);
      --color-amber-400: color(display-p3 0.95919 0.73852 0.11827);
      --color-amber-500: color(display-p3 0.93994 0.62058 0.05854);
      --color-amber-600: color(display-p3 0.82714 0.46717 0.0336);
      --color-amber-700: color(display-p3 0.67989 0.32771 0.05205);
      --color-amber-800: color(display-p3 0.54753 0.25606 0.07283);
      --color-yellow-300: color(display-p3 0.98267 0.88088 0.32102);
      --color-yellow-400: color(display-p3 0.95994 0.79017 0.05852);
      --color-yellow-500: color(display-p3 0.90365 0.70306 0.07454);
      --color-yellow-600: color(display-p3 0.77634 0.54249 0.04171);
      --color-yellow-700: color(display-p3 0.61315 0.38666 0.05797);
      --color-yellow-800: color(display-p3 0.50318 0.30478 0.07554);
      --color-lime-400: color(display-p3 0.66872 0.89377 0.20881);
      --color-lime-500: color(display-p3 0.5627 0.8018 0.13123);
      --color-lime-600: color(display-p3 0.43535 0.64061 0.09093);
      --color-lime-700: color(display-p3 0.33335 0.48633 0.09443);
      --color-lime-800: color(display-p3 0.27146 0.38418 0.09751);
      --color-green-500: color(display-p3 0.30873 0.77475 0.37431);
      --color-green-600: color(display-p3 0.24388 0.64082 0.29481);
      --color-green-700: color(display-p3 0.19836 0.5018 0.24533);
      --color-emerald-400: color(display-p3 0.3347 0.8196 0.59158);
      --color-emerald-500: color(display-p3 0.26711 0.72685 0.5084);
      --color-emerald-600: color(display-p3 0.20656 0.58906 0.41396);
      --color-emerald-700: color(display-p3 0.16404 0.47023 0.34351);
      --color-emerald-800: color(display-p3 0.1354 0.3714 0.27756);
      --color-emerald-900: color(display-p3 0.11782 0.30297 0.2345);
      --color-emerald-950: color(display-p3 0.05491 0.17043 0.13484);
      --color-teal-400: color(display-p3 0.32279 0.82206 0.74439);
      --color-teal-500: color(display-p3 0.26657 0.72152 0.65546);
      --color-teal-600: color(display-p3 0.20711 0.57958 0.53668);
      --color-teal-700: color(display-p3 0.17409 0.46132 0.43387);
      --color-teal-800: color(display-p3 0.1457 0.36705 0.35075);
      --color-cyan-400: color(display-p3 0.29464 0.81399 0.935);
      --color-cyan-500: color(display-p3 0.2467 0.71003 0.84144);
      --color-cyan-600: color(display-p3 0.19325 0.56465 0.7072);
      --color-cyan-700: color(display-p3 0.16412 0.45143 0.57057);
      --color-cyan-800: color(display-p3 0.15144 0.36521 0.46105);
      --color-sky-50: color(display-p3 0.9465 0.9754 0.99834);
      --color-sky-300: color(display-p3 0.54636 0.82256 0.99058);
      --color-sky-400: color(display-p3 0.30598 0.72501 0.98017);
      --color-sky-500: color(display-p3 0.21911 0.63903 0.93148);
      --color-sky-600: color(display-p3 0.16251 0.50938 0.79608);
      --color-sky-700: color(display-p3 0.13031 0.40457 0.64085);
      --color-sky-800: color(display-p3 0.12072 0.34308 0.52441);
      --color-blue-200: color(display-p3 0.76688 0.85521 0.98748);
      --color-blue-300: color(display-p3 0.60256 0.76721 0.99394);
      --color-blue-400: color(display-p3 0.39744 0.62813 0.99212);
      --color-blue-500: color(display-p3 0.26642 0.49122 0.98862);
      --color-indigo-50: color(display-p3 0.93622 0.94862 0.99562);
      --color-indigo-100: color(display-p3 0.88303 0.90499 0.99314);
      --color-indigo-200: color(display-p3 0.78656 0.82175 0.98845);
      --color-indigo-300: color(display-p3 0.65089 0.70016 0.99082);
      --color-indigo-400: color(display-p3 0.49499 0.52529 0.98511);
      --color-indigo-500: color(display-p3 0.38037 0.37224 0.97171);
      --color-violet-200: color(display-p3 0.86154 0.83885 0.98801);
      --color-violet-300: color(display-p3 0.75887 0.70626 0.99173);
      --color-violet-400: color(display-p3 0.63122 0.52218 0.99001);
      --color-violet-500: color(display-p3 0.52337 0.3296 0.99088);
      --color-purple-200: color(display-p3 0.90118 0.83598 0.99224);
      --color-purple-300: color(display-p3 0.82939 0.70374 0.99608);
      --color-purple-400: color(display-p3 0.71992 0.4925 0.99517);
      --color-purple-500: color(display-p3 0.62952 0.30089 0.99082);
      --color-purple-700: color(display-p3 0.4653 0.06526 0.8244);
      --color-fuchsia-100: color(display-p3 0.96918 0.91147 0.99504);
      --color-fuchsia-200: color(display-p3 0.93953 0.81894 0.98798);
      --color-fuchsia-300: color(display-p3 0.91137 0.67005 0.98621);
      --color-fuchsia-400: color(display-p3 0.86677 0.44776 0.97903);
      --color-fuchsia-600: color(display-p3 0.71659 0.08368 0.84104);
      --color-fuchsia-700: color(display-p3 0.60171 0.07756 0.69279);
      --color-pink-600: color(display-p3 0.82565 0.1412 0.45934);
      --color-pink-700: color(display-p3 0.71154 0.10101 0.35821);
      --color-pink-800: color(display-p3 0.58415 0.10534 0.2974);
      --color-rose-100: color(display-p3 0.98224 0.89723 0.90257);
      --color-rose-200: color(display-p3 0.96875 0.80878 0.82732);
      --color-rose-300: color(display-p3 0.96017 0.6477 0.68372);
      --color-rose-400: color(display-p3 0.94293 0.43076 0.5031);
      --color-rose-500: color(display-p3 0.92182 0.24075 0.35567);
      --color-rose-600: color(display-p3 0.84879 0.10201 0.26926);
      --color-rose-700: color(display-p3 0.7118 0.07708 0.22678);
      --color-rose-800: color(display-p3 0.59125 0.09291 0.2201);
    }
  }
}
view:not(n),
text:not(n),
:not(n):after,
:not(n):before,
:not(n)::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
:not(n)::file-selector-button {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.h-_30px_:not(n):not(n):not(n) {
  height: 30px;
}
.h-_45px_:not(n):not(n):not(n) {
  height: 45px;
}
.w-_323px_:not(n):not(n):not(n) {
  width: 323px;
}
.bg-_h3a32d1_:not(n):not(n):not(n) {
  background-color: #3a32d1;
}
.bg-_h7d7ac2_:not(n):not(n):not(n) {
  background-color: #7d7ac2;
}
.text-_100px_:not(n):not(n):not(n) {
  font-size: 100px;
}
.text-_h123456_:not(n):not(n):not(n) {
  color: #123456;
}
.text-_100rpx_:not(n):not(n):not(n) {
  color: 100rpx;
}
.text-red-700:not(n):not(n):not(n) {
  color: var(--color-red-700);
}
@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}
@keyframes ping {
  75%,
  to {
    opacity: 0;
    transform: scale(2);
  }
}
@keyframes pulse {
  50% {
    opacity: 0.5;
  }
}
@keyframes bounce {
  0%,
  to {
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
    transform: translateY(-25%);
  }
  50% {
    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
    transform: none;
  }
}
/*$vite$:1*/
"
`;

exports[`e2e native > 'vite-native' > json 1`] = `
"[
  "bg-[#3a32d1]",
  "bg-[#7d7ac2]",
  "h-[30px]",
  "h-[45px]",
  "text-[#123456]",
  "text-[100px]",
  "text-[100rpx]",
  "text-red-700",
  "w-[323px]"
]
"
`;

exports[`e2e native > 'vite-native' > wxml 1`] = `
"<scroll-view scroll-y="" type="list">
  <view class="bg-_h7d7ac2_ text-_100px_ text-_h123456_ w-_323px_ h-_30px_">111</view>
  <view class="bg-_h3a32d1_ text-_100rpx_ text-red-700 w-_323px_ h-_45px_">222</view>
</scroll-view>
.luna-dom-highlighter{position:fixed;left:0;top:0;width:100%;height:100%;z-index:100000;pointer-events:none;font-size:13px}.luna-dom-highlighter-fill{position:absolute;top:0;right:0;bottom:0;left:0}.luna-dom-highlighter-platform-linux{font-family:Roboto,Ubuntu,Arial,sans-serif}.luna-dom-highlighter-platform-mac{color:#303942;font-family:'.SFNSDisplay-Regular','Helvetica
Neue','Lucida Grande',sans-serif}.luna-dom-highlighter-platform-windows{font-family:'Segoe
UI',Tahoma,sans-serif}.luna-dom-highlighter-px{color:gray}#luna-dom-highlighter-element-title{position:absolute;z-index:10}.luna-dom-highlighter-tooltip-content{position:absolute;-webkit-user-select:none;-moz-user-select:none;user-select:none;background-color:#fff;padding:5px
8px;border:1px solid #fff;border-radius:3px;box-sizing:border-box;min-width:100px;max-width:min(300px,100% -
4px);z-index:2;background-clip:padding-box;will-change:transform;text-rendering:optimizeLegibility;pointer-events:none;filter:drop-shadow(0 2px 4px
rgba(0,0,0,.35))}.luna-dom-highlighter-tooltip-content
.luna-dom-highlighter-tooltip-arrow{background:#fff;width:15px;height:8px;position:absolute}.luna-dom-highlighter-element-info-section{margin-top:12px;margin-bottom:6px}.luna-dom-highlighter-section-name{color:#333;font-weight:500;font-size:10px;text-transform:uppercase;letter-spacing:.05em;line-height:12px}.luna-dom-highlighter-element-info{display:flex;flex-direction:column}.luna-dom-highlighter-element-info-header{display:flex;align-items:center}.luna-dom-highlighter-element-info-body{display:flex;flex-direction:column;padding-top:2px;margin-top:2px}.luna-dom-highlighter-element-info-row{display:flex;line-height:19px}.luna-dom-highlighter-separator-container{display:flex;align-items:center;flex:auto;margin-left:7px}.luna-dom-highlighter-separator{border-top:1px
solid
#ddd;width:100%}.luna-dom-highlighter-element-info-name{flex-shrink:0;color:#666}.luna-dom-highlighter-element-info-gap{flex:auto}.luna-dom-highlighter-element-info-value-color{display:flex;color:#303942;margin-left:10px;align-items:baseline}.luna-dom-highlighter-a11y-icon{width:16px;height:16px;background-repeat:no-repeat;display:inline-block}.luna-dom-highlighter-element-info-value-contrast{display:flex;align-items:center;text-align:right;color:#303942;margin-left:10px}.luna-dom-highlighter-element-info-value-contrast
.luna-dom-highlighter-a11y-icon{margin-left:8px}.luna-dom-highlighter-element-info-value-icon{display:flex;align-items:center}.luna-dom-highlighter-element-info-value-text{text-align:right;color:#303942;margin-left:10px;align-items:baseline;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}.luna-dom-highlighter-color-swatch{display:flex;margin-right:2px;width:10px;height:10px;background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);line-height:10px}.luna-dom-highlighter-color-swatch-inner{flex:auto;border:1px
solid
#808002}.luna-dom-highlighter-element-layout-type{margin-right:10px;width:16px;height:16px}.luna-dom-highlighter-element-layout-type.luna-dom-highlighter-grid{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-element-layout-type.luna-dom-highlighter-flex{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-element-description{flex:1
1;font-weight:700;word-wrap:break-word;word-break:break-all}.luna-dom-highlighter-dimensions{color:#737373;text-align:right;margin-left:10px}.luna-dom-highlighter-material-node-width{margin-right:2px}.luna-dom-highlighter-material-node-height{margin-left:2px}.luna-dom-highlighter-material-tag-name{color:#881280}.luna-dom-highlighter-material-class-name,.luna-dom-highlighter-material-node-id{color:#1a1aa6}.luna-dom-highlighter-contrast-text{width:16px;height:16px;text-align:center;line-height:16px;margin-right:8px;border:1px
solid #000;padding:0
1px}.luna-dom-highlighter-a11y-icon-not-ok{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-a11y-icon-warning{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-a11y-icon-ok{background-image:url('data:image/svg+xml,')}@media
(forced-colors:active){:root,body{background-color:transparent;forced-color-adjust:none}.luna-dom-highlighter-tooltip-content{border-color:Highlight;background-color:canvas;color:text;forced-color-adjust:none}.luna-dom-highlighter-tooltip-content::after{background-color:Highlight}.luna-dom-highlighter-color-swatch-inner,.luna-dom-highlighter-contrast-text,.luna-dom-highlighter-separator{border-color:Highlight}.luna-dom-highlighter-section-name{color:Highlight}.luna-dom-highlighter-dimensions,.luna-dom-highlighter-element-info-name,.luna-dom-highlighter-element-info-value-color,.luna-dom-highlighter-element-info-value-contrast,.luna-dom-highlighter-element-info-value-icon,.luna-dom-highlighter-element-info-value-text,.luna-dom-highlighter-material-class-name,.luna-dom-highlighter-material-node-id,.luna-dom-highlighter-material-tag-name{color:canvastext}}.luna-dom-highlighter{z-index:2147483647;}
"
`;

exports[`e2e native > 'vite-native-ts' > css 1`] = `
"::before,
::after {
  --tw-content: '';
}
view,
text,
:before,
:after {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-ring-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-shadow-colored: 0 0 rgba(0, 0, 0, 0);
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
  --tw-contain-size: ;
  --tw-contain-layout: ;
  --tw-contain-paint: ;
  --tw-contain-style: ;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: currentColor;
}
::backdrop {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-ring-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-shadow: 0 0 rgba(0, 0, 0, 0);
  --tw-shadow-colored: 0 0 rgba(0, 0, 0, 0);
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
  --tw-contain-size: ;
  --tw-contain-layout: ;
  --tw-contain-paint: ;
  --tw-contain-style: ;
}
.weapp-reset-button {
  padding: 0;
  background-color: transparent;
  background-color: initial;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}
.weapp-reset-button:after {
  border: none;
}
.mt-4 {
  margin-top: 32rpx;
}
.flex {
  display: flex;
}
.transform {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
    scaleY(var(--tw-scale-y));
}
.divide-x > view + view,
.divide-x > view + text,
.divide-x > text + view,
.divide-x > text + text {
  --tw-divide-x-reverse: 0;
  border-right-width: calc(1px * var(--tw-divide-x-reverse));
  border-left-width: calc(1px * (1 - var(--tw-divide-x-reverse)));
  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
}
.overflow-hidden {
  overflow: hidden;
}
.rounded-lg {
  border-radius: 16rpx;
}
.border {
  border-width: 1px;
}
.bg-_h123456_ {
  --tw-bg-opacity: 1;
  background-color: rgba(18, 52, 86, var(--tw-bg-opacity, 1));
}
.bg-_hd72929_ {
  --tw-bg-opacity: 1;
  background-color: rgba(215, 41, 41, var(--tw-bg-opacity, 1));
}
.bg-_green_ {
  --tw-bg-opacity: 1;
  background-color: rgba(0, 128, 0, var(--tw-bg-opacity, 1));
}
.bg-_orange_ {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 165, 0, var(--tw-bg-opacity, 1));
}
.bg-_pink_ {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 192, 203, var(--tw-bg-opacity, 1));
}
.bg-blue-600 {
  --tw-bg-opacity: 1;
  background-color: rgba(37, 99, 235, var(--tw-bg-opacity, 1));
}
.p-4 {
  padding: 32rpx;
}
.px-4 {
  padding-left: 32rpx;
  padding-right: 32rpx;
}
.px-6 {
  padding-left: 48rpx;
  padding-right: 48rpx;
}
.py-2 {
  padding-top: 16rpx;
  padding-bottom: 16rpx;
}
.py-6 {
  padding-top: 48rpx;
  padding-bottom: 48rpx;
}
.text-sm {
  font-size: 28rpx;
  line-height: 40rpx;
}
.font-medium {
  font-weight: 500;
}
.capitalize {
  text-transform: capitalize;
}
.tracking-wide {
  letter-spacing: 0.025em;
}
.text-gray-600 {
  --tw-text-opacity: 1;
  color: rgba(75, 85, 99, var(--tw-text-opacity, 1));
}
.text-white {
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
}
.transition-colors {
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 0.15s;
}
.duration-200 {
  transition-duration: 0.2s;
}
.duration-300 {
  transition-duration: 0.3s;
}
.focuscoutline-none:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}
.focuscring:focus {
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 rgba(0, 0, 0, 0));
}
.focuscring-blue-300:focus {
  --tw-ring-opacity: 1;
  --tw-ring-color: rgba(147, 197, 253, var(--tw-ring-opacity, 1));
}
.focuscring-opacity-80:focus {
  --tw-ring-opacity: 0.8;
}
@media (min-width: 640px) {
  .smcpx-6 {
    padding-left: 48rpx;
    padding-right: 48rpx;
  }
  .smctext-base {
    font-size: 32rpx;
    line-height: 48rpx;
  }
}
@media (prefers-color-scheme: dark) {
  .darkcdivide-gray-700 > view + view,
  .darkcdivide-gray-700 > view + text,
  .darkcdivide-gray-700 > text + view,
  .darkcdivide-gray-700 > text + text {
    --tw-divide-opacity: 1;
    border-color: rgba(55, 65, 81, var(--tw-divide-opacity, 1));
  }
  .darkcborder-gray-700 {
    --tw-border-opacity: 1;
    border-color: rgba(55, 65, 81, var(--tw-border-opacity, 1));
  }
  .darkcbg-gray-900 {
    --tw-bg-opacity: 1;
    background-color: rgba(17, 24, 39, var(--tw-bg-opacity, 1));
  }
  .darkctext-gray-300 {
    --tw-text-opacity: 1;
    color: rgba(209, 213, 219, var(--tw-text-opacity, 1));
  }
}
/*$vite$:1*/
"
`;

exports[`e2e native > 'vite-native-ts' > json 1`] = `
"[
  "bg-[#123456]",
  "bg-[#d72929]",
  "bg-[green]",
  "bg-[orange]",
  "bg-[pink]",
  "bg-blue-600",
  "border",
  "capitalize",
  "dark:bg-gray-900",
  "dark:border-gray-700",
  "dark:divide-gray-700",
  "dark:hover:bg-gray-800",
  "dark:text-gray-300",
  "divide-x",
  "duration-200",
  "duration-300",
  "flex",
  "focus:outline-none",
  "focus:ring",
  "focus:ring-blue-300",
  "focus:ring-opacity-80",
  "font-medium",
  "hover:bg-blue-500",
  "hover:bg-gray-100",
  "mt-4",
  "overflow-hidden",
  "p-4",
  "px-4",
  "px-6",
  "py-2",
  "py-6",
  "rounded-lg",
  "sm:px-6",
  "sm:text-base",
  "text-gray-600",
  "text-sm",
  "text-white",
  "tracking-wide",
  "transform",
  "transition-colors",
  "weapp-reset-button"
]
"
`;

exports[`e2e native > 'vite-native-ts' > wxml 1`] = `
"<view class="p-4">
  <view>
    <button
      class="weapp-reset-button index--weapp-reset-button px-6 index--px-6 py-2 index--py-2 font-medium index--font-medium tracking-wide index--tracking-wide text-white index--text-white capitalize index--capitalize transition-colors index--transition-colors duration-300 index--duration-300 transform index--transform rounded-lg index--rounded-lg hovercbg-blue-500 index--hovercbg-blue-500 focuscoutline-none index--focuscoutline-none focuscring index--focuscring focuscring-blue-300 index--focuscring-blue-300 focuscring-opacity-80 index--focuscring-opacity-80 bg-_orange_ index--bg-_orange_"
      hover-class="bg-_h123456_"
      role="button"
      aria-disabled="false">
      Primary
    </button>
    <view
      class="mt-4 index--mt-4 flex index--flex overflow-hidden index--overflow-hidden border index--border divide-x index--divide-x rounded-lg index--rounded-lg darkcbg-gray-900 index--darkcbg-gray-900 darkcborder-gray-700 index--darkcborder-gray-700 darkcdivide-gray-700 index--darkcdivide-gray-700 py-6 index--py-6">
      <button
        class="weapp-reset-button index--weapp-reset-button px-4 index--px-4 py-2 index--py-2 text-sm index--text-sm font-medium index--font-medium text-gray-600 index--text-gray-600 transition-colors index--transition-colors duration-200 index--duration-200 smctext-base index--smctext-base smcpx-6 index--smcpx-6 darkchovercbg-gray-800 index--darkchovercbg-gray-800 darkctext-gray-300 index--darkctext-gray-300 hovercbg-gray-100 index--hovercbg-gray-100"
        role="button"
        aria-disabled="false">
        Upload
      </button>
      <button
        class="weapp-reset-button index--weapp-reset-button px-4 index--px-4 py-2 index--py-2 text-sm index--text-sm font-medium index--font-medium text-gray-600 index--text-gray-600 transition-colors index--transition-colors duration-200 index--duration-200 smctext-base index--smctext-base smcpx-6 index--smcpx-6 darkchovercbg-gray-800 index--darkchovercbg-gray-800 darkctext-gray-300 index--darkctext-gray-300 hovercbg-gray-100 index--hovercbg-gray-100"
        role="button"
        aria-disabled="false">
        Drift
      </button>
      <button
        class="weapp-reset-button index--weapp-reset-button px-4 index--px-4 py-2 index--py-2 text-sm index--text-sm font-medium index--font-medium text-gray-600 index--text-gray-600 transition-colors index--transition-colors duration-200 index--duration-200 smctext-base index--smctext-base smcpx-6 index--smcpx-6 darkchovercbg-gray-800 index--darkchovercbg-gray-800 darkctext-gray-300 index--darkctext-gray-300 hovercbg-gray-100 index--hovercbg-gray-100"
        role="button"
        aria-disabled="false">
        View
      </button>
    </view>
  </view>
</view>
.luna-dom-highlighter{position:fixed;left:0;top:0;width:100%;height:100%;z-index:100000;pointer-events:none;font-size:13px}.luna-dom-highlighter-fill{position:absolute;top:0;right:0;bottom:0;left:0}.luna-dom-highlighter-platform-linux{font-family:Roboto,Ubuntu,Arial,sans-serif}.luna-dom-highlighter-platform-mac{color:#303942;font-family:'.SFNSDisplay-Regular','Helvetica
Neue','Lucida Grande',sans-serif}.luna-dom-highlighter-platform-windows{font-family:'Segoe
UI',Tahoma,sans-serif}.luna-dom-highlighter-px{color:gray}#luna-dom-highlighter-element-title{position:absolute;z-index:10}.luna-dom-highlighter-tooltip-content{position:absolute;-webkit-user-select:none;-moz-user-select:none;user-select:none;background-color:#fff;padding:5px
8px;border:1px solid #fff;border-radius:3px;box-sizing:border-box;min-width:100px;max-width:min(300px,100% -
4px);z-index:2;background-clip:padding-box;will-change:transform;text-rendering:optimizeLegibility;pointer-events:none;filter:drop-shadow(0 2px 4px
rgba(0,0,0,.35))}.luna-dom-highlighter-tooltip-content
.luna-dom-highlighter-tooltip-arrow{background:#fff;width:15px;height:8px;position:absolute}.luna-dom-highlighter-element-info-section{margin-top:12px;margin-bottom:6px}.luna-dom-highlighter-section-name{color:#333;font-weight:500;font-size:10px;text-transform:uppercase;letter-spacing:.05em;line-height:12px}.luna-dom-highlighter-element-info{display:flex;flex-direction:column}.luna-dom-highlighter-element-info-header{display:flex;align-items:center}.luna-dom-highlighter-element-info-body{display:flex;flex-direction:column;padding-top:2px;margin-top:2px}.luna-dom-highlighter-element-info-row{display:flex;line-height:19px}.luna-dom-highlighter-separator-container{display:flex;align-items:center;flex:auto;margin-left:7px}.luna-dom-highlighter-separator{border-top:1px
solid
#ddd;width:100%}.luna-dom-highlighter-element-info-name{flex-shrink:0;color:#666}.luna-dom-highlighter-element-info-gap{flex:auto}.luna-dom-highlighter-element-info-value-color{display:flex;color:#303942;margin-left:10px;align-items:baseline}.luna-dom-highlighter-a11y-icon{width:16px;height:16px;background-repeat:no-repeat;display:inline-block}.luna-dom-highlighter-element-info-value-contrast{display:flex;align-items:center;text-align:right;color:#303942;margin-left:10px}.luna-dom-highlighter-element-info-value-contrast
.luna-dom-highlighter-a11y-icon{margin-left:8px}.luna-dom-highlighter-element-info-value-icon{display:flex;align-items:center}.luna-dom-highlighter-element-info-value-text{text-align:right;color:#303942;margin-left:10px;align-items:baseline;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}.luna-dom-highlighter-color-swatch{display:flex;margin-right:2px;width:10px;height:10px;background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);line-height:10px}.luna-dom-highlighter-color-swatch-inner{flex:auto;border:1px
solid
#808002}.luna-dom-highlighter-element-layout-type{margin-right:10px;width:16px;height:16px}.luna-dom-highlighter-element-layout-type.luna-dom-highlighter-grid{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-element-layout-type.luna-dom-highlighter-flex{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-element-description{flex:1
1;font-weight:700;word-wrap:break-word;word-break:break-all}.luna-dom-highlighter-dimensions{color:#737373;text-align:right;margin-left:10px}.luna-dom-highlighter-material-node-width{margin-right:2px}.luna-dom-highlighter-material-node-height{margin-left:2px}.luna-dom-highlighter-material-tag-name{color:#881280}.luna-dom-highlighter-material-class-name,.luna-dom-highlighter-material-node-id{color:#1a1aa6}.luna-dom-highlighter-contrast-text{width:16px;height:16px;text-align:center;line-height:16px;margin-right:8px;border:1px
solid #000;padding:0
1px}.luna-dom-highlighter-a11y-icon-not-ok{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-a11y-icon-warning{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-a11y-icon-ok{background-image:url('data:image/svg+xml,')}@media
(forced-colors:active){:root,body{background-color:transparent;forced-color-adjust:none}.luna-dom-highlighter-tooltip-content{border-color:Highlight;background-color:canvas;color:text;forced-color-adjust:none}.luna-dom-highlighter-tooltip-content::after{background-color:Highlight}.luna-dom-highlighter-color-swatch-inner,.luna-dom-highlighter-contrast-text,.luna-dom-highlighter-separator{border-color:Highlight}.luna-dom-highlighter-section-name{color:Highlight}.luna-dom-highlighter-dimensions,.luna-dom-highlighter-element-info-name,.luna-dom-highlighter-element-info-value-color,.luna-dom-highlighter-element-info-value-contrast,.luna-dom-highlighter-element-info-value-icon,.luna-dom-highlighter-element-info-value-text,.luna-dom-highlighter-material-class-name,.luna-dom-highlighter-material-node-id,.luna-dom-highlighter-material-tag-name{color:canvastext}}.luna-dom-highlighter{z-index:2147483647;}
"
`;

exports[`e2e native > 'web-postcss7-compat' > css 1`] = `
".h-\\[121px\\] {
  height: 121px;
}
.w-\\[99px\\] {
  width: 99px;
}
"
`;

exports[`e2e native > 'web-postcss7-compat' > json 1`] = `
"[]
"
`;
